--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/*Cascating Stylesheet */
 * {
   margin: 0;
   padding: 0;
@@ -7,20 +6,130 @@
 
 html,
 body {
+  --black: #202024;
+  --silver: #323238;
+  --white: #FFFFFF;
+
   height: 100%;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
   display: grid;
   place-items: center;
-  background: rgb(27, 192, 233);
+} 
+
+main {
+  background: url(images/background.svg) no-repeat center/cover;
+  width: 100%;
+  min-height: 812px;
+  height: 100vh;
 }
 
-h1 {
+.container {
+  max-width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+
+  color: var(--white);
+}
+
+.avatar {
+  width: 10rem;
+  margin: 11.5rem auto 0;
+
+  position: relative;
+}
+
+.avatar span {
+  position: absolute;
+  top: -15px;
+  z-index: 1;
+}
+
+.avatar > img {
+  width: 10rem;
+  height: 11.5rem;
+  object-fit: cover;
+
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+}
+
+.name {
   font-size: 1.5rem;
+  margin-top: 1.5rem;
 }
 
-a {
-  color: rgb(250, 255, 253);
+.github-link {
+  margin: 0.8rem auto 0;
+  color: var(--white);
   text-decoration: none;
+
+  display: flex;
+  gap: 0.375rem;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.github-link:hover span {
+  text-decoration: underline;
+}
+
+.bio {
+  margin: 2rem 0;
+}
+  
+.menu {
+  list-style: none;
+  padding: 0;
+
+  display: flex;
+  gap: 0.5rem;
+
+  justify-content: center;
+}
+
+.menu li {
+  width: 3rem;
+  height: 3rem;
+  background: var(--silver);
+  transition: 300ms;
+}
+
+.menu li:hover {
+  border-radius: 50%;
+}
+
+.menu li a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--white);
+  font-size: 1.375rem;
+}
+
+.menu li a i {
+  transition: 300ms;
+}
+
+.github a:hover i {
+  color: #a3d9ef;
+}
+
+.facebook a:hover i {
+  color: #1877f2;
+}
+
+.instagram a:hover i {
+  color: #c32aa3;
+}
+
+.linkedin a:hover i {
+  color: #0a66c2;
 }
