adding css to the project and refactoring

--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@-webkit-keyframes textSpinner {
+  from {
+    transform: translateY(2rem) rotate(0deg);
+  }
+  to {
+    transform: translateY(2rem) rotate(360deg);
+  }
+}
+@keyframes textSpinner {
+  from {
+    transform: translateY(2rem) rotate(0deg);
+  }
+  to {
+    transform: translateY(2rem) rotate(360deg);
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -6,21 +22,18 @@
 
 html,
 body {
-  --black: #202024;
-  --silver: #323238;
-  --white: #FFFFFF;
-
   height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
 body {
   display: grid;
   place-items: center;
-} 
+  color: #FFFFFF;
+}
 
-main {
+.main {
   background: url(images/background.svg) no-repeat center/cover;
   width: 100%;
   min-height: 812px;
@@ -28,33 +41,32 @@ main {
 }
 
 .container {
+  margin: 0 auto;
   max-width: 250px;
-  margin-left: auto;
-  margin-right: auto;
   text-align: center;
-
-  color: var(--white);
 }
 
 .avatar {
   width: 10rem;
-  margin: 11.5rem auto 0;
-
   position: relative;
+  margin: 11.5rem auto 0;
 }
-
-.avatar span {
-  position: absolute;
+.avatar__circular {
   top: -15px;
   z-index: 1;
+  position: absolute;
 }
-
-.avatar > img {
+.avatar__spinner {
+  -webkit-animation: textSpinner infinite 24s linear;
+          animation: textSpinner infinite 24s linear;
+}
+.avatar__profile {
   width: 10rem;
   height: 11.5rem;
-  object-fit: cover;
-
-  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+          clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
 }
 
 .name {
@@ -62,74 +74,65 @@ main {
   margin-top: 1.5rem;
 }
 
-.github-link {
-  margin: 0.8rem auto 0;
-  color: var(--white);
-  text-decoration: none;
-
+.email {
+  color: #FFFFFF;
   display: flex;
   gap: 0.375rem;
-
-  justify-content: center;
   align-items: center;
+  margin: 0.8rem auto 0;
+  text-decoration: none;
+  justify-content: center;
 }
-
-.github-link:hover span {
+.email:hover .email__text {
   text-decoration: underline;
 }
 
 .bio {
   margin: 2rem 0;
 }
-  
-.menu {
-  list-style: none;
-  padding: 0;
 
+.nav {
   display: flex;
-  gap: 0.5rem;
-
   justify-content: center;
 }
-
-.menu li {
+.nav__menu {
+  padding: 0;
+  gap: 0.5rem;
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+.nav__menu li {
   width: 3rem;
   height: 3rem;
-  background: var(--silver);
+  background: #323238;
   transition: 300ms;
 }
-
-.menu li:hover {
+.nav__menu li:hover {
   border-radius: 50%;
 }
-
-.menu li a {
+.nav__menu li a {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  color: var(--white);
+  color: #FFFFFF;
   font-size: 1.375rem;
 }
-
-.menu li a i {
+.nav__menu li a i {
   transition: 300ms;
 }
-
-.github a:hover i {
+.nav__menu .github a:hover i {
   color: #a3d9ef;
 }
-
-.facebook a:hover i {
+.nav__menu .facebook a:hover i {
   color: #1877f2;
 }
-
-.instagram a:hover i {
+.nav__menu .instagram a:hover i {
   color: #c32aa3;
 }
-
-.linkedin a:hover i {
+.nav__menu .linkedin a:hover i {
   color: #0a66c2;
-}
+}/*# sourceMappingURL=style.css.map */
